manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gettask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gettask
  template:
    metadata:
      labels:
        app: gettask
    spec:
      containers:
      - name: gettask
        image: rakeshacr.azureacr.io/gettask:v1
        ports:
        - containerPort: 80
