manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gettask
spec:
  type: ClusterIP
  selector:
    app: gettask
  ports:
  - port: 80
    targetPort: 8000
